# delta

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: deploy.yml  format.yml  lint.yml  test.yml
cgraph/: Cargo.toml  build.rs  debug_example.sh
cgraph/examples/: circle.rs  core_text.rs  core_window.rs  curves.rs  friendly_text_api.rs  improved_shadow.rs  poly.rs  quad.rs  shadow.rs  shadow_control.rs  text.rs  texture.rs  window.rs  window2.rs
cgraph/metal/: main.metal
cgraph/src/: app.rs  cgraph.rs  macos.rs  object.rs  renderer.rs  text.rs  utils.rs
cgraph/src/app/: shared_objects.rs  window.rs
cgraph/src/macos/: image.rs  metal.rs  shader_code.rs  shaders.rs  shadows.rs  view.rs  win_custom.rs
cgraph/src/object/: buffer.rs  curve.rs  curve_primitives.rs  primitives.rs  quad.rs
cgraph/tests/: main.rs
core/cfont/: Cargo.toml
core/cfont/examples/: styled_text.rs
core/cfont/src/: cfont.rs  font.rs
core/cfont/src/font/: load.rs  shape.rs  style.rs
core/cfont/tests/: loading.rs  rendering.rs
outbox/: Cargo.toml  README.md
outbox/examples/: column.rs  interactable.rs  layout.rs  shape.rs  text.rs  window.rs
outbox/src/: app.rs  component.rs  event.rs  interactable.rs  outbox.rs  renderable.rs  window.rs
outbox/src/component/: empty.rs  layout.rs  shape.rs  text.rs
